local/logs/project.log
2019-10-13T11:46:25.594Z - normal: Load ~/.CocosCreator/settings.json
2019-10-13T11:46:25.657Z - normal: Initializing Asset Database
2019-10-13T11:46:25.661Z - normal: checking language setting...
2019-10-13T11:46:25.661Z - normal: Language: zh
2019-10-13T11:46:26.172Z - success: preview server running at http://localhost:7456
2019-10-13T11:46:26.209Z - success: protocol editor-framework registered
2019-10-13T11:46:26.209Z - success: protocol app registered
2019-10-13T11:46:26.209Z - success: protocol theme registered
2019-10-13T11:46:26.209Z - success: protocol packages registered
2019-10-13T11:46:26.209Z - success: protocol uuid registerred
2019-10-13T11:46:26.209Z - success: protocol db registerred
2019-10-13T11:46:26.209Z - success: protocol thumbnail registerred
2019-10-13T11:46:26.209Z - success: protocol unpack registerred
2019-10-13T11:46:26.210Z - success: protocol disable-commonjs registerred
2019-10-13T11:46:26.419Z - normal: connected!
2019-10-13T11:46:26.421Z - normal: Check project /Users/lixinyue/cocos/MaYa_Math
2019-10-13T11:46:26.423Z - normal: Initializing project /Users/lixinyue/cocos/MaYa_Math
2019-10-13T11:46:26.701Z - normal: Initializing Cocos2d
2019-10-13T11:46:27.232Z - normal: Initializing engine extends
2019-10-13T11:46:27.280Z - success: asset-db-debugger loaded
2019-10-13T11:46:27.286Z - success: baidu-adapter loaded
2019-10-13T11:46:27.292Z - success: color-picker loaded
2019-10-13T11:46:27.357Z - success: fb-audience-network loaded
2019-10-13T11:46:27.390Z - success: fb-live-stream loaded
2019-10-13T11:46:27.392Z - success: google-play-instant loaded
2019-10-13T11:46:27.395Z - success: huawei-runtime loaded
2019-10-13T11:46:27.566Z - success: cpk-publish loaded
2019-10-13T11:46:27.567Z - success: jsb-adapter loaded
2019-10-13T11:46:27.570Z - success: oppo-runtime loaded
2019-10-13T11:46:27.578Z - success: package-manager loaded
2019-10-13T11:46:27.656Z - success: qqplay-adapter loaded
2019-10-13T11:46:27.657Z - success: runtime-dev-tools loaded
2019-10-13T11:46:27.665Z - success: sdkbox loaded
2019-10-13T11:46:27.674Z - success: tester loaded
2019-10-13T11:46:27.683Z - success: ui-grid loaded
2019-10-13T11:46:27.692Z - success: ui-kit-preview-extra loaded
2019-10-13T11:46:27.699Z - success: ui-kit-preview loaded
2019-10-13T11:46:27.708Z - success: ui-kit loaded
2019-10-13T11:46:27.715Z - success: ui-tree loaded
2019-10-13T11:46:27.718Z - success: vivo-runtime loaded
2019-10-13T11:46:27.719Z - success: weapp-adapter loaded
2019-10-13T11:46:27.720Z - success: xiaomi-adapter loaded
2019-10-13T11:46:27.762Z - success: assets loaded
2019-10-13T11:46:27.769Z - success: builder loaded
2019-10-13T11:46:27.959Z - success: cocos-services loaded
2019-10-13T11:46:27.969Z - success: console loaded
2019-10-13T11:46:27.996Z - success: fb-instant-games loaded
2019-10-13T11:46:28.005Z - success: game-window loaded
2019-10-13T11:46:28.006Z - success: google-instant-games loaded
2019-10-13T11:46:28.014Z - success: hierarchy loaded
2019-10-13T11:46:28.024Z - success: inspector loaded
2019-10-13T11:46:28.025Z - success: keystore loaded
2019-10-13T11:46:28.033Z - success: node-library loaded
2019-10-13T11:46:28.035Z - success: package-asset loaded
2019-10-13T11:46:28.035Z - success: preferences loaded
2019-10-13T11:46:28.043Z - success: project-exporter loaded
2019-10-13T11:46:28.054Z - success: project-importer loaded
2019-10-13T11:46:28.063Z - success: project-settings loaded
2019-10-13T11:46:28.073Z - success: scene loaded
2019-10-13T11:46:28.075Z - success: simulator-debugger loaded
2019-10-13T11:46:28.076Z - success: sprite-editor loaded
2019-10-13T11:46:28.084Z - success: store loaded
2019-10-13T11:46:28.102Z - success: timeline loaded
2019-10-13T11:46:28.106Z - success: xiaomi-runtime loaded
2019-10-13T11:46:29.519Z - info: Cocos Services load base data!
2019-10-13T11:46:34.256Z - normal: Loading packages
2019-10-13T11:46:34.263Z - normal: Watching packages
2019-10-13T11:46:34.361Z - normal: Run Application
2019-10-13T13:00:29.923Z - failed: [db-task][sync-changes] Failed to import asset /Users/lixinyue/cocos/MaYa_Math/assets/Script/fill-in-blanks-1.js, message: Compile error: SyntaxError: /Users/lixinyue/cocos/MaYa_Math/assets/Script/fill-in-blanks-1.js: Unexpected token, expected , (244:15)
  242 | 
  243 | 
> 244 |     bt1_Clicked:function(){
      |                ^
  245 |         if(this.input.length < 10)//最多允许用户输入10位
  246 |             this.input += "1";
  247 |         this.lable_input.string = this.input;
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3564:12)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
